--- a/index.html
+++ b/index.html
@@ -15,32 +15,6 @@
             --sage: #8B9D83;
             --charcoal: #2D2D2D;
             --gold-accent: #D4A574;
-            .gallery-slider {
-                padding: 0 2rem;
-            }
-
-            .gallery-slide {
-                flex: 0 0 300px;
-                height: 225px;
-            }
-
-            .gallery-nav {
-                width: 40px;
-                height: 40px;
-                font-size: 1.2rem;
-            }
-
-            .city-cards {
-                grid-template-columns: 1fr;
-            }
-
-            .city-card {
-                padding: 2rem;
-            }
-
-            .city-name {
-                font-size: 2rem;
-            }
         }
 
         * {
@@ -234,16 +208,6 @@
             line-height: 1.2;
         }
 
-        .offering-subtitle {
-            text-align: center;
-            font-size: 1.1rem;
-            color: var(--cream);
-            opacity: 0.9;
-            margin-bottom: 4rem;
-            font-weight: 300;
-            letter-spacing: 0.05em;
-        }
-
         .offering-grid {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
@@ -260,6 +224,7 @@
         .offering-card:nth-child(1) { animation-delay: 0.6s; }
         .offering-card:nth-child(2) { animation-delay: 0.8s; }
         .offering-card:nth-child(3) { animation-delay: 1s; }
+        .offering-card:nth-child(4) { animation-delay: 1.2s; }
 
         .offering-icon {
             font-size: 3rem;
@@ -355,6 +320,18 @@
             background: linear-gradient(to bottom, white 0%, var(--cream) 100%);
             padding: 6rem 0;
             animation: fadeIn 1.8s ease-out 0.9s both;
+            position: relative;
+        }
+
+        .details::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 120px;
+            height: 1px;
+            background: linear-gradient(to right, transparent, var(--sage), transparent);
         }
 
         .details-grid {
@@ -389,110 +366,6 @@
         .detail-highlight {
             color: var(--warm-terracotta);
             font-weight: 500;
-        }
-
-        /* Photo Gallery Section */
-        .gallery {
-            padding: 6rem 0;
-            background: white;
-            animation: fadeIn 2.2s ease-out 1.3s both;
-            overflow: hidden;
-        }
-
-        .gallery-title {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 1rem;
-            color: var(--deep-burgundy);
-            font-weight: 400;
-        }
-
-        .gallery-subtitle {
-            text-align: center;
-            font-size: 1rem;
-            color: var(--charcoal);
-            margin-bottom: 3rem;
-            font-weight: 300;
-            opacity: 0.8;
-        }
-
-        .gallery-slider {
-            position: relative;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 4rem;
-        }
-
-        .gallery-track {
-            display: flex;
-            gap: 2rem;
-            overflow-x: auto;
-            scroll-behavior: smooth;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-            padding-bottom: 1rem;
-        }
-
-        .gallery-track::-webkit-scrollbar {
-            display: none;
-        }
-
-        .gallery-slide {
-            flex: 0 0 400px;
-            height: 300px;
-            position: relative;
-            overflow: hidden;
-            border: 1px solid rgba(92, 58, 58, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .gallery-slide:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(92, 58, 58, 0.15);
-        }
-
-        .gallery-slide img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .gallery-slide:hover img {
-            transform: scale(1.05);
-        }
-
-        .gallery-nav {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: var(--deep-burgundy);
-            color: white;
-            border: none;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 1.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.3s ease;
-            z-index: 10;
-        }
-
-        .gallery-nav:hover {
-            background: var(--warm-terracotta);
-            transform: translateY(-50%) scale(1.1);
-        }
-
-        .gallery-nav.prev {
-            left: 0;
-        }
-
-        .gallery-nav.next {
-            right: 0;
         }
 
         /* Upcoming Salons Section */
@@ -658,135 +531,6 @@
             transform: translateY(-2px);
         }
 
-        .sold-out {
-            background: transparent;
-            color: var(--charcoal);
-            border-color: var(--charcoal);
-            opacity: 0.5;
-            cursor: not-allowed;
-        }
-
-        .sold-out:hover {
-            transform: none;
-            border-color: var(--charcoal);
-        }
-
-        .sold-out::before {
-            display: none;
-        }
-
-        /* Email Signup */
-        .signup {
-            background: var(--sage);
-            padding: 5rem 0;
-            text-align: center;
-            animation: fadeIn 2s ease-out 1.1s both;
-        }
-
-        /* Photo Gallery Section */
-        .gallery {
-            padding: 6rem 0;
-            background: white;
-            animation: fadeIn 2.2s ease-out 1.3s both;
-            overflow: hidden;
-        }
-
-        .gallery-title {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 2.5rem;
-            text-align: center;
-            margin-bottom: 1rem;
-            color: var(--deep-burgundy);
-            font-weight: 400;
-        }
-
-        .gallery-subtitle {
-            text-align: center;
-            font-size: 1rem;
-            color: var(--charcoal);
-            margin-bottom: 3rem;
-            font-weight: 300;
-            opacity: 0.8;
-        }
-
-        .gallery-slider {
-            position: relative;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 4rem;
-        }
-
-        .gallery-track {
-            display: flex;
-            gap: 2rem;
-            overflow-x: auto;
-            scroll-behavior: smooth;
-            scrollbar-width: none;
-            -ms-overflow-style: none;
-            padding-bottom: 1rem;
-        }
-
-        .gallery-track::-webkit-scrollbar {
-            display: none;
-        }
-
-        .gallery-slide {
-            flex: 0 0 400px;
-            height: 300px;
-            position: relative;
-            overflow: hidden;
-            border: 1px solid rgba(92, 58, 58, 0.1);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .gallery-slide:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(92, 58, 58, 0.15);
-        }
-
-        .gallery-slide img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .gallery-slide:hover img {
-            transform: scale(1.05);
-        }
-
-        .gallery-nav {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            background: var(--deep-burgundy);
-            color: white;
-            border: none;
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            cursor: pointer;
-            font-size: 1.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.3s ease;
-            z-index: 10;
-        }
-
-        .gallery-nav:hover {
-            background: var(--warm-terracotta);
-            transform: translateY(-50%) scale(1.1);
-        }
-
-        .gallery-nav.prev {
-            left: 0;
-        }
-
-        .gallery-nav.next {
-            right: 0;
-        }
-
         /* Email Signup */
         .signup {
             background: var(--sage);
@@ -854,10 +598,31 @@
             transform: translateY(-2px);
         }
 
+        /* Footer */
+        footer {
+            background: var(--deep-burgundy);
+            color: var(--cream);
+            padding: 3rem 0 2rem;
+            text-align: center;
+        }
+
+        .footer-logo {
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            font-weight: 300;
+        }
+
+        .footer-text {
+            font-size: 0.9rem;
+            opacity: 0.8;
+            font-weight: 300;
+        }
+
         /* Theme Suggestion Box */
         .suggestions {
             background: transparent;
-            padding: 3rem 0 4rem;
+            padding: 1.5rem 0 2rem;
             text-align: center;
         }
 
@@ -919,27 +684,6 @@
             opacity: 1;
         }
 
-        /* Footer */
-        footer {
-            background: var(--deep-burgundy);
-            color: var(--cream);
-            padding: 3rem 0 2rem;
-            text-align: center;
-        }
-
-        .footer-logo {
-            font-family: 'Cormorant Garamond', serif;
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            font-weight: 300;
-        }
-
-        .footer-text {
-            font-size: 0.9rem;
-            opacity: 0.8;
-            font-weight: 300;
-        }
-
         /* Animations */
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -998,10 +742,6 @@
                 font-size: 2.5rem;
             }
 
-            .offering-subtitle {
-                font-size: 1rem;
-            }
-
             .offering-grid {
                 grid-template-columns: repeat(2, 1fr);
                 gap: 2rem;
@@ -1019,19 +759,16 @@
                 font-size: 2rem;
             }
 
-            .gallery-slider {
-                padding: 0 2rem;
+            .city-cards {
+                grid-template-columns: 1fr;
             }
 
-            .gallery-slide {
-                flex: 0 0 300px;
-                height: 225px;
+            .city-card {
+                padding: 2rem;
             }
 
-            .gallery-nav {
-                width: 40px;
-                height: 40px;
-                font-size: 1.2rem;
+            .city-name {
+                font-size: 2rem;
             }
         }
     </style>
@@ -1072,14 +809,14 @@
                         <p>Guided breakout conversations after each presentation where you process ideas with fellow seekers in intimate groups.</p>
                     </div>
                     <div class="offering-card">
-                        <span class="offering-icon">✧</span>
-                        <h3>Hospitality</h3>
-                        <p>Thoughtfully selected wines, craft beverages, and hors d'oeuvres that create the perfect atmosphere for connection and conversation.</p>
-                    </div>
-                    <div class="offering-card">
                         <span class="offering-icon">❖</span>
                         <h3>Beautiful Spaces</h3>
                         <p>Hosted in carefully selected homes that create the perfect atmosphere for depth, intimacy, and meaningful exchange.</p>
+                    </div>
+                    <div class="offering-card">
+                        <span class="offering-icon">✧</span>
+                        <h3>Hospitality</h3>
+                        <p>Thoughtfully selected wines, craft beverages, and hors d'oeuvres that create the perfect atmosphere for connection and conversation.</p>
                     </div>
                 </div>
             </div>
@@ -1153,7 +890,6 @@
                 <p class="upcoming-subtitle">Join us for our next gatherings</p>
                 
                 <div class="city-cards">
-                    <!-- Boulder Card -->
                     <div class="city-card">
                         <h3 class="city-name">Boulder</h3>
                         <p class="event-date">March 15, 2025 · 7:00 PM</p>
@@ -1167,64 +903,4 @@
                                 <div class="detail-value">12 remaining</div>
                             </div>
                             <div class="detail-item">
-                                <div class="detail-label">Investment</div>
-                                <div class="detail-value">$95</div>
-                            </div>
-                        </div>
-                        <a href="#" class="ticket-button">Reserve Your Spot</a>
-                    </div>
-
-                    <!-- Denver Card -->
-                    <div class="city-card">
-                        <h3 class="city-name">Denver</h3>
-                        <p class="event-date">April 8, 2025 · 7:00 PM</p>
-                        <p class="event-theme">Building the Future: Technology, Ethics & Human Connection</p>
-                        <p class="event-speakers">
-                            Featuring James Liu (AI Ethicist) and Dr. Amara Okafor (Community Organizer)
-                        </p>
-                        <div class="event-details">
-                            <div class="detail-item">
-                                <div class="detail-label">Tickets</div>
-                                <div class="detail-value">28 remaining</div>
-                            </div>
-                            <div class="detail-item">
-                                <div class="detail-label">Investment</div>
-                                <div class="detail-value">$95</div>
-                            </div>
-                        </div>
-                        <a href="#" class="ticket-button">Reserve Your Spot</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="signup" id="signup">
-            <div class="container">
-                <h2 class="signup-title">Be Among the First</h2>
-                <p class="signup-subtitle">Join our community to receive invitations to upcoming salons and early access to tickets.</p>
-                <form class="email-form" action="#" method="post">
-                    <input type="email" class="email-input" placeholder="Your email address" required>
-                    <button type="submit" class="email-submit">Join</button>
-                </form>
-            </div>
-        </section>
-
-        <section class="suggestions">
-            <div class="container">
-                <p class="suggestions-title">Have a theme idea? Share it with us</p>
-                <form class="suggestion-form" action="#" method="post">
-                    <input type="text" class="suggestion-input" placeholder="Your theme suggestion..." required>
-                    <button type="submit" class="suggestion-submit">Submit</button>
-                </form>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <div class="footer-logo">The Exchange</div>
-            <p class="footer-text">Boulder & Denver, Colorado</p>
-        </div>
-    </footer>
-</body>
-</html>
+                                <div class="
