--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
             position: relative;
         }
 
-        /* Rich textured background */
         body::before {
             content: '';
             position: fixed;
@@ -41,27 +40,11 @@
             width: 100%;
             height: 100%;
             background-image: 
-                repeating-linear-gradient(
-                    90deg,
-                    transparent,
-                    transparent 2px,
-                    rgba(92, 58, 58, 0.02) 2px,
-                    rgba(92, 58, 58, 0.02) 4px
-                ),
-                repeating-linear-gradient(
-                    0deg,
-                    transparent,
-                    transparent 2px,
-                    rgba(139, 157, 131, 0.02) 2px,
-                    rgba(139, 157, 131, 0.02) 4px
-                ),
+                repeating-linear-gradient(90deg, transparent, transparent 2px, rgba(92, 58, 58, 0.02) 2px, rgba(92, 58, 58, 0.02) 4px),
+                repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(139, 157, 131, 0.02) 2px, rgba(139, 157, 131, 0.02) 4px),
                 radial-gradient(circle at 20% 30%, rgba(212, 165, 116, 0.04) 0%, transparent 50%),
                 radial-gradient(circle at 80% 70%, rgba(139, 157, 131, 0.04) 0%, transparent 50%),
-                linear-gradient(135deg, 
-                    rgba(247, 243, 237, 0.95) 0%, 
-                    rgba(247, 243, 237, 1) 50%,
-                    rgba(245, 240, 232, 0.95) 100%
-                );
+                linear-gradient(135deg, rgba(247, 243, 237, 0.95) 0%, rgba(247, 243, 237, 1) 50%, rgba(245, 240, 232, 0.95) 100%);
             background-size: 100% 100%, 100% 100%, 800px 800px, 800px 800px, 100% 100%;
             z-index: -1;
             animation: shift 30s ease-in-out infinite alternate;
@@ -78,7 +61,6 @@
             padding: 0 2rem;
         }
 
-        /* Header */
         header {
             padding: 4rem 0 3.5rem;
             text-align: center;
@@ -107,10 +89,9 @@
             display: inline-block;
         }
 
-        /* Hero Section */
         .hero {
             text-align: center;
-            padding: 2.5rem 0 6rem;
+            padding: 1.5rem 0 6rem;
             animation: fadeIn 1.2s ease-out 0.3s both;
         }
 
@@ -172,7 +153,6 @@
             transform: translateY(-2px);
         }
 
-        /* What We Offer Section */
         .offering {
             background: linear-gradient(135deg, var(--deep-burgundy) 0%, #4A2F2F 100%);
             color: var(--cream);
@@ -202,7 +182,7 @@
             font-family: 'Cormorant Garamond', serif;
             font-size: 3.5rem;
             text-align: center;
-            margin-bottom: 1rem;
+            margin-bottom: 4rem;
             font-weight: 300;
             letter-spacing: 0.02em;
             line-height: 1.2;
@@ -248,7 +228,6 @@
             font-weight: 300;
         }
 
-        /* Experience Section */
         .experience {
             padding: 6rem 0;
             animation: fadeIn 1.6s ease-out 0.7s both;
@@ -315,7 +294,6 @@
             font-weight: 300;
         }
 
-        /* Details Section */
         .details {
             background: linear-gradient(to bottom, white 0%, var(--cream) 100%);
             padding: 6rem 0;
@@ -368,7 +346,6 @@
             font-weight: 500;
         }
 
-        /* Upcoming Salons Section */
         .upcoming {
             padding: 6rem 0;
             background: white;
@@ -531,7 +508,6 @@
             transform: translateY(-2px);
         }
 
-        /* Email Signup */
         .signup {
             background: var(--sage);
             padding: 5rem 0;
@@ -598,7 +574,6 @@
             transform: translateY(-2px);
         }
 
-        /* Footer */
         footer {
             background: var(--deep-burgundy);
             color: var(--cream);
@@ -619,7 +594,6 @@
             font-weight: 300;
         }
 
-        /* Theme Suggestion Box */
         .suggestions {
             background: transparent;
             padding: 1.5rem 0 2rem;
@@ -684,92 +658,38 @@
             opacity: 1;
         }
 
-        /* Animations */
         @keyframes fadeIn {
             from { opacity: 0; }
             to { opacity: 1; }
         }
 
         @keyframes fadeInDown {
-            from { 
-                opacity: 0; 
-                transform: translateY(-30px);
-            }
-            to { 
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(-30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes fadeInUp {
-            from { 
-                opacity: 0; 
-                transform: translateY(30px);
-            }
-            to { 
-                opacity: 1;
-                transform: translateY(0);
-            }
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         @keyframes slideIn {
-            from { 
-                opacity: 0; 
-                transform: translateX(-50px);
-            }
-            to { 
-                opacity: 1;
-                transform: translateX(0);
-            }
+            from { opacity: 0; transform: translateX(-50px); }
+            to { opacity: 1; transform: translateX(0); }
         }
 
-        /* Responsive */
         @media (max-width: 768px) {
-            .logo {
-                font-size: 3.5rem;
-            }
-
-            .hero-title {
-                font-size: 2rem;
-            }
-
-            .hero-description {
-                font-size: 1rem;
-            }
-
-            .offering-title,
-            .experience-title {
-                font-size: 2.5rem;
-            }
-
-            .offering-grid {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 2rem;
-            }
-
-            .email-form {
-                flex-direction: column;
-            }
-
-            .flow-item {
-                padding: 1.5rem;
-            }
-
-            .flow-number {
-                font-size: 2rem;
-            }
-
-            .city-cards {
-                grid-template-columns: 1fr;
-            }
-
-            .city-card {
-                padding: 2rem;
-            }
-
-            .city-name {
-                font-size: 2rem;
-            }
+            .logo { font-size: 3.5rem; }
+            .hero-title { font-size: 2rem; }
+            .hero-description { font-size: 1rem; }
+            .offering-title, .experience-title { font-size: 2.5rem; }
+            .offering-grid { grid-template-columns: repeat(2, 1fr); gap: 2rem; }
+            .email-form { flex-direction: column; }
+            .flow-item { padding: 1.5rem; }
+            .flow-number { font-size: 2rem; }
+            .city-cards { grid-template-columns: 1fr; }
+            .city-card { padding: 2rem; }
+            .city-name { font-size: 2rem; }
         }
     </style>
 </head>
@@ -903,4 +823,63 @@
                                 <div class="detail-value">12 remaining</div>
                             </div>
                             <div class="detail-item">
-                                <div class="
+                                <div class="detail-label">Investment</div>
+                                <div class="detail-value">$95</div>
+                            </div>
+                        </div>
+                        <a href="#" class="ticket-button">Reserve Your Spot</a>
+                    </div>
+
+                    <div class="city-card">
+                        <h3 class="city-name">Denver</h3>
+                        <p class="event-date">April 8, 2025 · 7:00 PM</p>
+                        <p class="event-theme">Building the Future: Technology, Ethics & Human Connection</p>
+                        <p class="event-speakers">
+                            Featuring James Liu (AI Ethicist) and Dr. Amara Okafor (Community Organizer)
+                        </p>
+                        <div class="event-details">
+                            <div class="detail-item">
+                                <div class="detail-label">Tickets</div>
+                                <div class="detail-value">28 remaining</div>
+                            </div>
+                            <div class="detail-item">
+                                <div class="detail-label">Investment</div>
+                                <div class="detail-value">$95</div>
+                            </div>
+                        </div>
+                        <a href="#" class="ticket-button">Reserve Your Spot</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="signup" id="signup">
+            <div class="container">
+                <h2 class="signup-title">Be Among the First</h2>
+                <p class="signup-subtitle">Join our community to receive invitations to upcoming salons and early access to tickets.</p>
+                <form class="email-form" action="#" method="post">
+                    <input type="email" class="email-input" placeholder="Your email address" required>
+                    <button type="submit" class="email-submit">Join</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-logo">The Exchange</div>
+            <p class="footer-text">Boulder & Denver, Colorado</p>
+        </div>
+    </footer>
+
+    <section class="suggestions">
+        <div class="container">
+            <p class="suggestions-title">Have a theme idea? Share it with us</p>
+            <form class="suggestion-form" action="#" method="post">
+                <input type="text" class="suggestion-input" placeholder="Your theme suggestion..." required>
+                <button type="submit" class="suggestion-submit">Submit</button>
+            </form>
+        </div>
+    </section>
+</body>
+</html>
