Update email button text and styles

--- a/index.html
+++ b/index.html
@@ -555,17 +555,18 @@
         }
 
         .email-submit {
-            padding: 1rem 2.5rem;
+            padding: 1rem 2rem;
             background: var(--deep-burgundy);
             color: white;
             border: 2px solid var(--deep-burgundy);
-            font-size: 1rem;
-            letter-spacing: 0.1em;
+            font-size: 0.9rem;
+            letter-spacing: 0.08em;
             text-transform: uppercase;
             cursor: pointer;
             transition: all 0.3s ease;
             font-family: 'Montserrat', sans-serif;
             font-weight: 500;
+            white-space: nowrap;
         }
 
         .email-submit:hover {
@@ -859,7 +860,7 @@
                 <p class="signup-subtitle">Join our community to receive invitations to upcoming salons and early access to tickets.</p>
                 <form class="email-form" action="#" method="post">
                     <input type="email" class="email-input" placeholder="Your email address" required>
-                    <button type="submit" class="email-submit">Join</button>
+                    <button type="submit" class="email-submit">Join the Conversation</button>
                 </form>
             </div>
         </section>
