Modify title, add meta description and favicon
Updated the title and added a meta description and favicon.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Exchange — A Modern Salon for Thought, Creativity & Connection</title>
+    <title>The Exchange | Modern Salon in Boulder & Denver</title>
+    <meta name="description" content="Intimate gatherings in Boulder and Denver where artists, scientists, philosophers, and thought leaders spark meaningful conversation. Limited to 50 guests per evening.">
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='75' fill='%235C3A3A'>E</text></svg>">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600&family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
